# cv-project

./: .gitignore  compose.yaml
.github/workflows/: github-action-analyze.yaml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/v1/routes/: router.py  users.py
backend/app/core/: config.py
backend/app/db/: db.py
backend/app/models/: description.py  skills.py  user.py  workexperience.py
backend/app/schemas/: Description.py  Education.py  Hobby.py  Skills.py  User.py  WorkExperience.py
frontend/: .dockerignore  .prettierignore  .prettierrc.json  Dockerfile  commitlint.config.js  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/.github/workflows/: github-action-analyze.yaml
frontend/.husky/: commit-msg  post-merge  pre-commit  pre-push
frontend/docs/general/: clean_code_guidelines.md  file_structure_guidelines.md  form_guidelines.md  zustand_guidelines.md
frontend/src/: App.tsx  main.tsx
frontend/src/app/: App.tsx
frontend/src/components/: CheckboxComponent.tsx  DatePickerComponent.tsx  DisplayErrorForm.tsx  FieldComponent.tsx  RadioComponent.tsx  SelectComponent.tsx  TextareaComponent.tsx
frontend/src/components/ui/: CFuturelogo.tsx  (+16 more)
frontend/src/hooks/: useAppStores.ts  useHandleSubmit.ts  useZodForm.ts
frontend/src/stores/: slices.ts  store.ts
frontend/src/styles/: global.css
