[project]
name = "cv-project"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "databases[postgresql]==0.9.0",
    "email-validator==2.3.0",
    "fastapi[standard]==0.135.1",
    "jinja2==3.1.6",
    "passlib[bcrypt]==1.7.4",
    "pdfkit==1.0.0",
    "psycopg[binary]==3.3.3",
    "python-jose==3.5.0",
    "sqlalchemy==2.0.48",
    "uvicorn[standard]==0.23.2",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | .ruff_cache
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
exclude = ["venv", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]  # ignore line length if black handles it


[tool.mypy]
python_version = 3.12
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[tool.pre-commit]
repos = [
    { repo = "https://github.com/psf/black", rev = "26.3.1", hooks = [{id = "black"}] },
    { repo = "https://github.com/charliermarsh/ruff-pre-commit", rev = "0.15.6", hooks = [{id = "ruff"}] },
    { repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.19.1", hooks = [{id = "mypy"}] }
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "httpx==0.28.1",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.6",
]
